<resources>
    <string name="app_name">LoginApp</string>
    <string name="create_an_account">Create an Account</string>
    <string name="Or">Or</string>
    <string name="dash" />
    <string name="t_continue">Continue</string>
    <string name="password">Password </string>
    <string name="e_mail">E-mail</string>
    <string name="please_log_in">Explora</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="hi_there">Hi there!</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="label">label</string>
    <string name="login">Login</string>
    <string name="register_now">Register now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>