<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".welcomescreen">

    <!-- ImageView -->

    <!-- İlk TextView -->

    <ImageView
        android:layout_width="203dp"
        android:layout_height="254dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="120dp"
        android:src="@drawable/baloon"
        app:layout_constraintBottom_toTopOf="@+id/uiPleaseLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/uiPleaseLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_text_heavy"
        android:text="@string/please_log_in"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- İkinci TextView -->
    <TextView
        android:id="@+id/uiWelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/uiPleaseLogIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Register Button -->

    <!-- Login Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_round"
        android:backgroundTint="#48FFFFFF"
        android:elevation="20dp"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/register_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="36dp"
        android:background="@drawable/bg_round"
        android:backgroundTint="#03D3D3"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
