<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPage">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="36dp"
        android:background="@drawable/bg_round"
        android:backgroundTint="#0000FF"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="Next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="610dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateAccount"
        android:layout_width="299dp"
        android:layout_height="43dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_round"
        android:backgroundTint="#808387"
        android:elevation="20dp"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="55dp" />

    <CheckBox
        android:layout_width="194dp"
        android:layout_height="78dp"
        android:checked="true"
        android:text="Remember me"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="520dp" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginHorizontal="36dp"
        android:background="@drawable/bg_round"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="18dp"
        android:fontFamily="@font/sf_pro_text_medium"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="#3C3C43"
        android:textColorHint="#DD4A4A50"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="356dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginHorizontal="36dp"
        android:background="@drawable/bg_round"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="18dp"
        android:fontFamily="@font/sf_pro_text_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="#3C3C43"
        android:textColorHint="#DD4A4A50"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="458dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/undraw"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="272dp"
        android:src="@drawable/welcome"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="304dp"
        android:src="@drawable/sign"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>